--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -6,25 +6,25 @@
 
 /* You can override the default Infima variables here. */
 :root {
-  --ifm-color-primary: #2e8555;
-  --ifm-color-primary-dark: #29784c;
-  --ifm-color-primary-darker: #277148;
-  --ifm-color-primary-darkest: #205d3b;
-  --ifm-color-primary-light: #33925d;
-  --ifm-color-primary-lighter: #359962;
-  --ifm-color-primary-lightest: #3cad6e;
+  --ifm-color-primary: #4a34bc;
+  --ifm-color-primary-dark: #432fa9;
+  --ifm-color-primary-darker: #3f2ca0;
+  --ifm-color-primary-darkest: #342484;
+  --ifm-color-primary-light: #553eca;
+  --ifm-color-primary-lighter: #5d48cc;
+  --ifm-color-primary-lightest: #7664d4;
   --ifm-code-font-size: 95%;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
 }
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
 [data-theme='dark'] {
-  --ifm-color-primary: #25c2a0;
-  --ifm-color-primary-dark: #21af90;
-  --ifm-color-primary-darker: #1fa588;
-  --ifm-color-primary-darkest: #1a8870;
-  --ifm-color-primary-light: #29d5b0;
-  --ifm-color-primary-lighter: #32d8b4;
-  --ifm-color-primary-lightest: #4fddbf;
+  --ifm-color-primary: #ff57e0;
+  --ifm-color-primary-dark: #ff35da;
+  --ifm-color-primary-darker: #ff24d7;
+  --ifm-color-primary-darkest: #ef00c3;
+  --ifm-color-primary-light: #ff79e6;
+  --ifm-color-primary-lighter: #ff8ae9;
+  --ifm-color-primary-lightest: #ffbef3;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
 }
