--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -15,6 +15,7 @@
   --ifm-color-primary-lightest: #7664d4;
   --ifm-code-font-size: 95%;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
+  --ifm-navbar-height: 5em;
 }
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
@@ -27,4 +28,14 @@
   --ifm-color-primary-lighter: #ff8ae9;
   --ifm-color-primary-lightest: #ffbef3;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
+  --ifm-navbar-height: 5em;
+}
+
+.navbar__logo {
+  padding: 0.5rem;
+  height: 4em;
+}
+
+[data-theme='dark'] .navbar__logo {
+  background-color: #aaaaaa;
 }
