--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -8,6 +8,8 @@
   text-align: center;
   position: relative;
   overflow: hidden;
+  background-image: url("/assets/ryoanji.jpg");
+  margin-bottom: 10em;
 }
 
 @media screen and (max-width: 996px) {
