--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -21,5 +21,11 @@
 .buttons {
   display: flex;
   align-items: center;
-  justify-content: center;
+  flex-wrap: wrap;
+}
+
+@media screen and (min-width: 600px) {
+  .buttons {
+    justify-content: center;
+  }
 }
